Changes for Perl extension Padre-Plugin-Swarm
0.093 -
	- fix wx flags on chat control to behave on win32
	- fix json decoding bug with large messages
	- make chat text font fixed-width
	- add tab completion of nickname in chat text entry
0.092 - Sat Feb 13 13:47:38 EST 2010
	- remove references to packages lost after refactor
	- skip compile tests without DISPLAY 
0.091 - Sat Feb 13 00:15:00 EST 2010
	- broken
0.09 - Fri Feb 12 23:45:11 EST 2010
	- refactor network parts into Transport::* 
	- more useful output returned from runme
	- prevent loopback of runme message type
	- prevent loopback of openme message type
	- add preferences dialog

0.08 - Fri Feb  5 
	- add pod - mostly TODO 
	- stop squatting in padre::wx namespace

0.07 - Sun Jan 17 19:48:09 EST 2010
	- allow document stealing
	- observe other swarm users open editor documents
	- hook editor_enable/disable and announce documents open/close
	- add swarm resource tree next to directory/project tree
	- remove deps on IO::Interface
	- pass incoming swarm messages as Wx events
	- internal reworking
0.06 
	- add feature Open in Other Editor
	- attempt to select a usable multicast interface
0.05 - Sun Dec 13 19:51:51 EST 2009
	- add 'Run in other editor' feature 
	- chat text restyled
	- chat accept message type 'promote' 
	- Replaced debug called with new TRACE() call
0.04 - Wed Nov  4 17:36:05 EST 2009
	- test updates
	- version boilerplate (BRAMBLE) 
0.03 *RELEASED POORLY*
	- expunge IRC transport (BRAMBLE)
	- remove list of chat users

0.02 *RELEASED IN ERROR* 
	- add some styling to user chat window , colourize output
	- attempt to add a list of chat users
	- apply diff snippets to current documents silently and with deadly force

0.01 - Sun Nov 1 2009 
	- add chat-join announcements to chat window (BRAMBLE)
	- add support for '/nick' change (BRAMBLE)
	- Moved Padre::Swarm::Transport::XMPP to it's own
	  distribution (ADAMK)
	- Made warnings toggle'able with a single constant (ADAMK)