@@ -1,5 +1,6 @@
 Changes for Perl extension Padre-Plugin-Swarm
 0.093 -
+	- hackish keepalive on global transport wxsocket
 	- fix wx flags on chat control to behave on win32
 	- fix json decoding bug with large messages
 	- make chat text font fixed-width
